task2/kuber/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: task-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - task-gateway
  http:
  - match:
    - uri:
        exact: /log
      method:
        exact: POST
    route:
    - destination:
        host: task-service
        port:
          number: 80
    timeout: 1s
    retries:
        attempts: 2
        perTryTimeout: 1s
    fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s

  - fault:
      abort:
        httpStatus: 404
        percentage:
          value: 100
    route:
      - destination:
          host: task-service
